--- a/package.json
+++ b/package.json
@@ -10,15 +10,23 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/schematics": "^14.0.1",
     "@angular/animations": "^14.0.0",
+    "@angular/cdk": "^14.0.1",
     "@angular/common": "^14.0.0",
     "@angular/compiler": "^14.0.0",
     "@angular/core": "^14.0.0",
     "@angular/forms": "^14.0.0",
+    "@angular/material": "^14.0.1",
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@kolkov/ngx-gallery": "^2.0.1",
+    "angular-ui-carousel": "^0.1.10",
+    "font-awesome": "^4.7.0",
+    "ngx-toastr": "^14.3.0",
     "rxjs": "~7.5.0",
+    "swiper": "^8.2.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
