--- a/angular.json
+++ b/angular.json
@@ -24,8 +24,7 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "./node_modules/ngx-toastr/toastr.css",
-              "src/styles.css"
+              "./node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": []
           },
@@ -65,9 +64,6 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
-            "sslKey":"./ssl/server.key",
-            "sslCert":"./ssl/server.crt",
-            "ssl":true,
             "production": {
               "browserTarget": "Client:build:production"
             },
