--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@kolkov/ngx-gallery": "^2.0.1",
     "angular-ui-carousel": "^0.1.10",
     "font-awesome": "^4.7.0",
+    "ngx-bootstrap": "^8.0.0",
     "ngx-toastr": "^14.3.0",
     "rxjs": "~7.5.0",
     "swiper": "^8.2.4",
